[package]
name = "pico-rust-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[dependencies.pico-ups-hat-b]
path = "/Users/turbo/src/Mercedes SLK Drive Selector/rust-libs-ups"

[dependencies.defmt-serial]
# The released one (v1.0.1) is missing features for new Embassy.
git = "https://github.com/gauteh/defmt-serial"
rev = "411ae7fa909b4fd2667885aff687e009b9108190"

[dependencies.embassy-embedded-hal]
features = ["defmt"]
git = "https://github.com/embassy-rs/embassy.git"
rev = "ef01e2e"

[dependencies.embassy-executor]
features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"]
git = "https://github.com/embassy-rs/embassy.git"
rev = "ef01e2e"

[dependencies.embassy-rp]
features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"]
git = "https://github.com/embassy-rs/embassy.git"
rev = "ef01e2e"

[profile.dev]
codegen-units = 1
debug = "full"
debug-assertions = true
incremental = false
opt-level = 1
overflow-checks = true
